javamain-javacc/examples/adder_example02/Adder.jj
//参考：https://www.cnblogs.com/suhaha/p/11733565.html
/*adder.jj 吧一堆数字相加*/
options{
        STATIC = false;
}
PARSER_BEGIN(Adder)
public class Adder{
        public static void main(String[] args) throws ParseException, TokenMgrError{
                Adder parser = new Adder(System.in);
                int val = parser.Start();
                System.out.println(val);
        }
}
PARSER_END(Adder)

//词法分析器
SKIP :{" "}
SKIP:{"\n"|"\r"|"\r\n"}
TOKEN:{< PLUS : "+">}
TOKEN:{< NUMBER : (["0"-"9"])+ >}

int Start() throws NumberFormatException:
{
    int i;
    int value;
}
{
    value = Primary()
    (
        <PLUS>
        i = Primary()
        { value += i ; }
    )*
    <EOF>
    { return value ; }
}

int Primary() throws NumberFormatException:{
    Token t;
}
{
    t = <NUMBER>
    {return Integer.parseInt(t.image);}
}
